--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,9 @@
         <version>1.0.0</version>
     </parent>
 
-    <groupId>com.github.mongoutils</groupId>
     <artifactId>mongo-jackson-mapper</artifactId>
-    <version>1.0.0</version>
-    <packaging>pom</packaging>
+    <version>0.1</version>
+    <packaging>jar</packaging>
     <name>mongo-jackson-mapper</name>
 
     <inceptionYear>2012</inceptionYear>
