--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
     <version>0.1</version>
     <packaging>jar</packaging>
     <name>mongo-jackson-mapper</name>
+    
+    <properties>
+        <jackson.version>2.0.5</jackson.version>
+        <mongo.driver.version>2.8.0</mongo.driver.version>
+    </properties>
 
     <inceptionYear>2012</inceptionYear>
     <url>https://github.com/mongoutils</url>
@@ -40,4 +45,17 @@
         <url>git@github.com:mongoutils/mongo-jackson-mapper.git</url>
     </scm>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>${mongo.driver.version}</version>
+        </dependency>
+    </dependencies>
+    
 </project>
